--- a/humidity.html
+++ b/humidity.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
     <title>Weather Dashboard</title>
 </head>
@@ -43,20 +42,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-7 col-md-12">
-                <div class="box" style="padding-bottom: 20px;">
-                    <h3 class="title">SUMMARY: WEATHER PLOTS <br> (LATITUDE VS. X)</h3>
+                <div class="box">
+                    <h3 class="title">LATITUDE VS. HUMIDITY</h3>
                     <hr>
-                    <img src="assets/images/Fig1.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
-                    <p> The purpose of this project was to analyze how weather across 500+ cities across the world
-                      changes as you get closer to the equator. To accomplish this analysis, OpenWeatherMap API was
-                      utilized to assemble the dataset to create a representative model of weather across world cities.</p>
-                      <br>
-                    <p> Matplotlib was used to build a series of plots to showcase the relationships regarding several variables
-                      of weather vs. latitude. Relationships analyzed included: Temperature (F) vs. Latitude, Humidity (%) vs. Latitude,
-                      Cloudiness (%) vs. Latitude, and Wind Speed (mph) vs. Latitude.</p>
-                      <br>
-                    <p> Data and visualizations are are provided as part of the analysis, including explanations and descriptions
-                      of trends and correlations.</p>
+                    <img src="assets/images/Fig2.png" class="vizualization rounded float-left" alt="Humidity Graph">
+                    <p>There seems to be no relationship between latitude and humidity. A variety of measurements of humidity can be found
+                    regardless of latitude. Regarding the data, there are some points with 0% humidity towards the north pole.<br><br><br><br></p>
                 </div>
             </div>
             <div class="col-lg-5 col-md-12">
@@ -68,13 +59,13 @@
                             <div class="col-6">
                                 <div class="title">Latitude vs. Max Temperature</div>
                                 <a href="temperature.html">
-                                <img class="panel" src="assets/images/Fig1.png" alt="Max Temperature Graph">
+                                  <img class="panel" src="assets/images/Fig1.png" alt="Max Temperature Graph">
                                 </a>
                             </div>
                             <div class="col-6">
                                 <div class="title">Latitude vs. Humidity</div>
                                 <a href="humidity.html">
-                                <img class="panel" src="assets/images/Fig2.png" alt="Humidity Graph">
+                                    <img class="panel" src="assets/images/Fig2.png" alt="Humidity Graph">
                                 </a>
                             </div>
                         </div>
@@ -82,9 +73,8 @@
                             <div class="col-6">
                                 <div class="title">Latitude vs. Cloudiness</div>
                                 <a href="cloudiness.html">
-                                <img class="panel" src="assets/images/Fig3.png" alt="Cloudiness Graph">
+                                    <img class="panel" src="assets/images/Fig3.png" alt="Cloudiness Graph">
                                 </a>
-                                <!-- <div class="title">vs. Cloudiness</div> -->
                             </div>
                             <div class="col-6">
                                 <div class="title">Latitude vs. Wind Speed</div>
@@ -98,6 +88,6 @@
             </div>
         </div>
     </div>
-    <footer> Web Design Challenge - Aizelmarie Magsino </footer>
+    <footer> Web Design Challenge - Daniel Fernandez </footer>
 </body>
 </html>
